<resources>
    <string name="app_name">JournalPrime</string>
    <string name="entry_title_hint">Enter a title for the entry.</string>
    <string name="entry_title_label">Title</string>
    <string name="entry_details_label">Details</string>
    <string name="entry_solved_label">Solved</string>
    <string name="date_picker_title">Date of entry:</string>
    <string name="new_entry">New Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d entries</string>
    <string name="entry_content_label">Entry</string>
    <string name="entry_temp_label">Temp</string>
    <string name="entry_mood_label">Mood</string>
    <string name="entry_sky_label">Sky</string>
    <string name="entry_location_label">City</string>
    <string name="entry_time_label">Time</string>
    <string name="entry_date_label">Date</string>
    <string name="time_picker_title">Time of entry:</string>
    <string-array name="cities_of_Texas">
        <item>Amarillo</item>
        <item>Austin</item>
        <item>Canyon</item>
        <item>Corpus Cristi</item>
        <item>Dallas</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Houston</item>
        <item>Lubbock</item>
        <item>San Antonio</item>
        <item>Waco</item>
    </string-array>
</resources>
