<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/entry_title_label"/>

        <EditText
            android:id="@+id/entry_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/entry_title_hint"/>

        <ImageButton
            android:id="@+id/entry_camera"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@android:drawable/ic_menu_camera"/>
    </GridLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_details_label"
        android:textColor="@color/colorPrimary"/>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_date_label"/>
        <Button
            android:id="@+id/entry_date"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_time_label"/>
        <Button
            android:id="@+id/entry_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="8dp"/>

    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_location_label"/>

        <Spinner
            android:id="@+id/entry_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="8dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:columnCount="4">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/entry_sky_label"/>

        <EditText
            android:id="@+id/entry_sky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="1"
            android:hint="Ptly Cloudy"/>

        <ImageView
            android:id="@+id/entry_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:layout_rowSpan="3"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <!--<TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowSpan="2"
            android:text="@string/entry_mood_label"/>

        <Spinner
            android:id="@+id/entry_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_rowSpan="2"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>-->

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text=""/>

        <ImageView
            android:id="@+id/entry_sky_icon"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_vertical"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            android:src="@drawable/icon_error"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_temp_label"/>

        <EditText
            android:id="@+id/entry_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5dp"
            android:layout_gravity="fill_horizontal"
            android:hint="66 F"/>

    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_gravity="fill"
        android:orientation="vertical">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/entry_content_label"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/entry_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="Enter your thoughts here"/>

    </GridLayout>

    <!--<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/entry_cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Cancel"/>

        <Button
            android:id="@+id/entry_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Save"/>

    </GridLayout>-->

    <!--CheckBox
        android:id="@+id/entry_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_solved_label"/-->

</GridLayout>